# elizabeth

./: .autocorrectrc  .claude  .dockerignore  .env.docker  .gitignore  .pre-commit-config.yaml  .release-plz.toml  .secrets.baseline  API_ERROR_FIX_REPORT.md  API_ERROR_INVESTIGATION_REPORT.md  API_ERROR_SUMMARY_CN.md  BUILDFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLETE_UI_TEST_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  FINAL_STATUS_REPORT.md  FIXING_AND_TESTING_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY_CN.md  LICENSE  Makefile  PLAYWRIGHT_UI_TEST_FRAMEWORK.md  PRODUCT.md  README.en.md  README.md  REFACTORING_AND_TESTING_RESULTS.md  REFACTORING_SUMMARY.md  REPORT.md  Rust SQLx 深度开发使用指南.md  TASKs.md  TODO.md  UITests.md  backend.yaml  bacon.toml  ci_issues.md  config.example.toml  context.yaml  (+10 more)
crates/board/: Cargo.toml  build.rs
crates/board-protocol/: Cargo.toml
crates/board-protocol/bindings/: ChunkStatusInfo.ts  ChunkUploadRequest.ts  ChunkUploadResponse.ts  ChunkedUploadPreparationRequest.ts  ChunkedUploadPreparationResponse.ts  CleanupResponse.ts  ContentType.ts  CreateMessageRequest.ts  CreateMessageResponse.ts  CreateRefreshTokenRequest.ts  CreateUrlContentRequest.ts  DeleteContentRequest.ts  DeleteContentResponse.ts  DeleteRoomResponse.ts  FileMergeRequest.ts  IssueTokenResponse.ts  LogoutRequest.ts  MergedFileInfo.ts  MessagePage.ts  PublicConfigResponse.ts  PublicRoomConfig.ts  PublicRoomExpiryConfig.ts  RefreshTokenRequest.ts  RefreshTokenResponse.ts  ReservedFileInfo.ts  RevokeTokenResponse.ts  RoomChunkUpload.ts  RoomContent.ts  RoomContentView.ts  RoomRefreshToken.ts  RoomToken.ts  RoomUploadReservation.ts  RoomView.ts  TokenBlacklistEntry.ts  TokenType.ts  UpdateContentRequest.ts  UpdateRoomPermissionRequest.ts  UpdateRoomSettingsRequest.ts  UploadContentResponse.ts  UploadFileDescriptor.ts  (+6 more)
crates/board-protocol/src/: codegen.rs  constants.rs  lib.rs
crates/board-protocol/src/dto/: admin.rs  auth.rs  chunked_upload.rs  config.rs  content.rs  mod.rs  rooms.rs  token.rs
crates/board/.sqlx/: query-0129b78db5de01076ab922eeba8de726046060ac1c0e89ec49f93f548fa29049.json  query-0970fe78feb3cf26e5ee2ef575793ab18b41eb30e577e24187f9066045098a42.json  query-0f7157cef71ecf41c81529c13fe913ed8bd0e14393818d4e27ada7ea7ad0f0c4.json  query-25a7245ff4114676af4eff726fd65431151da144107c2575bf66cd19c7925d92.json  query-34887f7ac725da9443477cbed319b059017e92b90e16a48d5e381b12c47d2ac3.json  query-35edf9790c31c31b30aca9bd043dba2aed35a9bde95a98fec18d0d0668d9f862.json  query-52563526ae3d598347ae7b461a48b70e5eefc4e96bc42729ec7af405c189f563.json  query-537e4a732a71b3ba7769b20f072e2e91e6da787cec74008ba9a123a908a33ee4.json  query-56535ed3416a273e23d92a5ef27b8c5274337b2fd280be8852dbcb09347ec683.json  query-5e8c3e3787ea6d6dbb5a1c860bda32f9dd5a03c9a57e676c097c5074b2fc021e.json  query-62dc207ef58350268e67e4cf18ed280767f7c37a9478554b47ff261766f6a335.json  query-6bc1684cf822303a35880fb1677ebef0df94f0065fa432ace71a831b26b99025.json  query-7983cd2d033f14627d6f7eeb949633923967197a1186dc0a007d378eb108bf8d.json  query-8f89d05f6b91dc1815f501437183b2e5e14b569fc95aa5de5c8424ded7d79994.json  query-a449d1442bf83a6d239e251a6f5d3c2e29f9a2ee842cbc513c846937b2dee308.json  query-ac41fa371ee7a15ea37f399d7a9b8493422ec01f06de2dbb6683349e68828f89.json  query-b408d67d4561aa106006b46e19d1391a64d9eac149ff303b98de228bdd7cf2d4.json  query-b65f26614c81adab3bb97052588757a661ced95a1f69ab17b61015fd66b6c555.json  query-b9818c90b8b0bbc178a3f8a408d174c97b6185b12de89cff62fd4001619354d0.json  query-bc528e7c2e619e51b0cafc8f4062143e9652eb78b48fd93f14d0b96bd1a9d11d.json  query-bd57d741de64da43118c0ca115bc0b4e0dfe0fdf5fac82c5648220c58a084a52.json  query-bdeb50a846415dce6544af8132cd9a419b6bb5bb49aada1b5341a38e1a450a3f.json  query-c14825c46eeb62ce9658e385c1338d4edf69003208bd32683753d607da8ae945.json  query-c66db84c428b338a8351334133be4e2aa5cc8ba3b10c6d261a98957dae613772.json  query-d648263d43933b150d979fe005e51a89675db506e3c79df2babe3b0bd63f2277.json  query-d6c7edd62b5961fcb0db1f625b61ee2edba958a061a61e0cc10a64ecd14b77c6.json  query-d8e9b41c33e8676eea0d090b1459379580355dfd987afaa243f6c3be73a50cb1.json  query-e6c6be418eba2ab6fbd31c24d42ecb2a7d43bd11aceacb1b0204f5081bc34b67.json  query-eea02293f601f0ece3423968266efe15aeee9364f6f74cb54e52290bf3696aa3.json  query-f0308aa9268d4d30f7af0a96d0ee5e891fbe82eafcfdc44fafb450445df45934.json  query-fd546c0038d18be3b41b74ef5b7438607e870e8e4dd5b9358d26c9f0369a67fb.json
crates/board/bindings/: ChunkUploadRequest.ts  RoomRefreshToken.ts  TokenBlacklistEntry.ts  UploadFileDescriptor.ts
crates/board/migrations/: 0001_create_rooms.sql  0002_create_room_contents.sql  0003_create_room_access_logs.sql  0004_create_room_tokens.sql  0005_create_room_upload_reservations.sql  001_create_rooms_table.sql  001_initial_schema.sql  002_create_room_contents_table.sql  002_refresh_tokens.sql  002_room_gc.sql  003_chunked_upload.sql  003_create_room_access_logs_table.sql  003_message_pagination_index.sql  004_add_file_name.sql  004_add_indexes.sql  004_room_expiry_backfill.sql  005_create_room_tokens_table.sql  006_create_room_upload_reservations_table.sql  007_add_room_slug.sql  9999_create_indexes.sql
crates/board/migrations_pg/: 001_initial_schema.sql  002_room_gc.sql  003_datetime_columns_as_text.sql  005_room_expiry_backfill.sql
crates/board/src/: chunk_temp_storage.rs  config.rs  constants.rs  lib.rs  main.rs  permissions.rs  state.rs
crates/board/src/cmd/: cli.rs  completions.rs  mod.rs
crates/board/src/db/: mod.rs
crates/board/src/errors/: mod.rs
crates/board/src/handlers/: admin.rs  auth.rs  chunked_upload.rs  config.rs  content.rs  mod.rs  (+3 more)
crates/board/tests/: api_integration_tests.rs  auth_system_tests.rs  authentication_tests.rs  chunked_upload_tests.rs  middleware_tests.rs  mod.rs  room_repository_tests.rs  storage_system_tests.rs  websocket_integration_tests.rs  websocket_tests.rs
crates/configrs/: Cargo.toml
crates/configrs/src/: error.rs  lib.rs  merge.rs  redact.rs
crates/logrs/: Cargo.toml
crates/logrs/src/: lib.rs  logger.rs
(+497 files in other folders)
