[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
license = "BSD-3"

[workspace]
members = ["crates/*"]
resolver = "3"


[workspace.dependencies]
logrs = { package = "elizabeth-logrs", path = "crates/logrs", features = ["logging"] }
configrs = { package = "elizabeth-configrs", path = "crates/configrs" }
