[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
license-file = "LICENSE"

[workspace]
members = ["crates/*"]
exclude = ["crates/web"]
resolver = "3"


[workspace.dependencies]
logrs = { package = "elizabeth-logrs", path = "crates/logrs", features = ["logging"] }
configrs = { package = "elizabeth-configrs", path = "crates/configrs" }
