[package]
name = "elizabeth-board-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "board_protocol"
path = "src/lib.rs"

[features]
default = []
typescript-export = ["dep:schemars", "dep:ts-rs"]

[dependencies]
bitflags = { version = "2", features = ["serde"] }
bon = { version = "3" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["any", "chrono", "postgres", "sqlite"] }
utoipa = { version = "5", features = ["chrono"] }
uuid = { version = "1", features = ["v4"] }

schemars = { version = "1", features = ["chrono04"], optional = true }
ts-rs = { version = "11", features = ["chrono-impl", "serde-compat"], optional = true }
