[package]
name = "board"
version.workspace = true # 使用 workspace 版本
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["logging"]
full = ["completions", "logging"]
dynamic = []
# Optional features
completions = ["dep:clap_complete"]
logging = ["logrs/logging", "dep:log"]
disable-log = ["logrs/disable-log"]
structured-log = ["logrs/structured-log"]

[dependencies]
log = { version = "0.4", optional = true }
logrs = { workspace = true, features = ["logging"] }
configrs = { workspace = true }

shadow-rs = { version = "1", features = ["no_std"] }

clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", optional = true }

tokio = { version = "1", features = ["full"] }
axum = "0.8.6"
axum_responses = "0.4.4"

serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["chrono"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"

utoipa = "5"
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-axum = "0.2"

chrono = { version = "0.4", features = ["serde"] }


sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "sqlite",
    "migrate",
    "chrono",
] }
async-trait = "0.1"

# JWT authentication
uuid = { version = "1", features = ["v4", "serde"] }

# File upload dependencies
multer = "3"
tokio-util = { version = "0.7", features = ["io"] }
mime = "0.3"
mime_guess = "2.0"
sha2 = "0.10"
sanitize-filename = "0.6"
tempfile = "3.0"

[dev-dependencies]
tower = "0.5"

[build-dependencies]
anyhow = { version = "1" }
toml = { version = "0.9", features = ["preserve_order"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4" }
shadow-rs = { version = "1", features = ["no_std"] }
