[package]
name = "elizabeth-board"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "board"
path = "src/lib.rs"

[[bin]]
name = "board"
path = "src/main.rs"

[features]
default = ["logging"]
full = ["completions", "logging"]
dynamic = []
# Optional features
completions = ["dep:clap_complete"]
logging = ["logrs/logging", "dep:log"]
disable-log = ["logrs/disable-log"]
structured-log = ["logrs/structured-log"]
typescript-export = ["board_protocol/typescript-export"]

[dependencies]
# Workspace dependencies
log = { workspace = true, optional = true }
logrs = { workspace = true }
configrs = { workspace = true }
board_protocol = { workspace = true }

shadow-rs = { workspace = true }

clap = { workspace = true }
clap_complete = { workspace = true, optional = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-axum = { workspace = true }

chrono = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }

# JWT authentication
uuid = { workspace = true }
tokio-util = { workspace = true }
mime_guess = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sanitize-filename = { workspace = true }
futures = { workspace = true }

# Storage abstraction layer
opendal = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
shadow-rs = { workspace = true }
board_protocol = { workspace = true, features = ["typescript-export"] }
