[package]
name = "configrs"
version.workspace = true  # 使用 workspace 版本
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
merge = { version = "0.2" }

thiserror = { version = "2" }
derive_more = { version = "2", features = ["full"] }
smart-default = { version = "0.7" }
tracing = { version = "0.1" }

config = { version = "0.15", features = ["preserve_order"] }
fs4 = { version = "0.13" }

serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9" }


[dev-dependencies]
tempfile = "3.23.0"
