[package]
name = "elizabeth-configrs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "configrs"
path = "src/lib.rs"

[dependencies]
merge = { workspace = true }
thiserror = { workspace = true }
smart-default = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
fs4 = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
