[package]
name = "elizabeth-logrs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
name = "logrs"
path = "src/lib.rs"

[features]
default = ["logging"]
logging = ["dep:log"]
structured-log = ["tracing-subscriber/json"]
disable-log = ["tracing/max_level_off"]

[dependencies]
log = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
